--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -92,11 +92,16 @@
             <h3>반응형웹 코딩 작업</h3>
             <div class="desc">
               <div class="left">
-                <img src="" alt="반응형사이트" />
+                <img
+                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
+                  alt="" />
               </div>
               <div class="right">
-
-
+                하나의 웹사이트에서 PC, 스마트폰, 태블릿 PC 등 접속하는
+                디스플레이의 종류에 따라 화면의 크기가 자동으로 변하도록 만든 반응형 웹사이트입니다
+                반응형의 장점은 검색엔진에 친화적이라는 것 외에도 여러가지가 존재 합니다. 앞서 언급한 바와 같이 단 하나의 웹사이트로 다양한 디바이스에 대응함으로써 유지보수 및 추가 개발 이슈에 대해
+                시간과 비용면에서도 보다
+                효율적입니다.
               </div>
               <div class="bot">
                 <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
@@ -176,6 +181,23 @@
           </div>
         </div>
 
+        <div class="sns_design">
+          <a href="#" class="btn-modal">sns design</a>
+          <span>sns 디자인 작업</span>
+          <div class="modal">
+            <h3>sns 디자인 작업</h3>
+            <div class="desc">
+              <div class="left">
+
+              </div>
+              <div class="right">
+              </div>
+            </div>
+
+            <a href="#" class="close">닫기</a>
+          </div>
+        </div>
+
         <div class="Coding_Clone_Site">
           <a href="#" class="btn-modal">Coding Clone Site</a>
           <span>클론 코딩 사이트</span>
@@ -188,6 +210,10 @@
                   alt="ddd" />
               </div>
               <div class="right">이렇게 작업을 했습니다.</div>
+              <div class="bot">
+                <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+              </div>
             </div>
 
             <a href="#" class="close">닫기</a>
@@ -214,9 +240,9 @@
 
         <div class="figma_website">
           <a href="#" class="btn-modal">figma website</a>
-          <span>웹 페이지디자인</span>
+          <span>웹 페이지디자인 작업</span>
           <div class="modal">
-            <h3>웹 페이지디자인</h3>
+            <h3>웹 페이지디자인 작업(figma)</h3>
             <div class="desc">
               <div class="left">
                 <img src="img/figma.jpg" alt="">
@@ -230,9 +256,9 @@
 
         <div class="photoshop_website">
           <a href="#" class="btn-modal">photoshop website design</a>
-          <span>사이트 페이지 디자인</span>
+          <span>웹 페이지디자인 작업</span>
           <div class="modal">
-            <h3>사이트 페이지 디자인</h3>
+            <h3>웹 페이지디자인 작업(photoshop)</h3>
             <div class="desc">
               <div class="left">
                 <img src="img/ｍａｒｐｐｌｅ1.jpg" alt="사이트페이지디자인" />
@@ -346,7 +372,7 @@
                 <img src="img/mouse1.png" alt="마우스효과">
 
               </div>
-              <div class="right">이렇게 작업을 했습니다.</div>
+              <div class="right">마우스의 움직임에 따라 다양한 효과를 표현하는 마우스 이펙트입니다.</div>
               <div class="bot">
                 <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
                 <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
