--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -272,7 +272,7 @@
                             <div class="right">
                                 페이지 사이즈 - 1280 X 4952 /<br>
                                 패밀리레스토랑 사이트를 디자인했습니다.
-                                상단에 로고와 메뉴를 배치해 사용자가 한눈에 원하는 목록으로 이용이 용이하게 하였고 헤더하단에 이미지아이콘을 배치해 다시 이동을 원활하게 만들습니다.이미지와
+                                상단에 로고와 메뉴를 배치해 사용자가 한눈에 원하는 목록으로 이용이 용이하게 하였고 헤더하단에 이미지아이콘을 배치해 다시 이동을 원활하게 만들었습니다.이미지와
                                 배너중심으로 한눈에
                                 사이트내용을 파악하고 빠른 이동이 가능하게 디자인했습니다.<br>
                             </div>
