--- a/responsive web/index.html
+++ b/responsive web/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>responsive web</title>
-  </head>
-  <body></body>
+<html lang="ko">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="author" content="palepinkday">
+  <meta name="description" content="반응형 사이트">
+  <meta name="keywords" content="반응형사이트">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>responsive web</title>
+  <!-- style -->
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body></body>
+
 </html>
