--- a/responsive web/index.html
+++ b/responsive web/index.html
@@ -1,136 +1,295 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="author" content="palepinkday" />
+    <meta name="description" content="반응형 사이트" />
+    <meta name="keywords" content="반응형사이트" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>responsive web</title>
+    <!-- style -->
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/font-awesome.css"> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="author" content="palepinkday">
-  <meta name="description" content="반응형 사이트">
-  <meta name="keywords" content="반응형사이트">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>responsive web</title>
-  <!-- style -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <!-- <link rel="stylesheet" href="css/font-awesome.css"> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- 파비콘 -->
+    <link rel="shortcut icon" href="icon/favicon-152.png" />
+    <link rel="apple-touch-icon-precomposed" href="icon/favicon-152.png" />
+    <link rel="icon" href="path/to/favicon.png" />
+    <link rel="icon" href="icon/favicon-16.png" sizes="16x16" />
+    <link rel="icon" href="icon/favicon-32.png" sizes="32x32" />
+    <link rel="icon" href="icon/favicon-48.png" sizes="48x48" />
+    <link rel="icon" href="icon/favicon-64.png" sizes="64x64" />
+    <link rel="icon" href="icon/favicon-128.png" sizes="128x128" />
 
+    <!-- Facebook meta tags -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="반응형 사이트 만들기(title)" />
+    <meta
+      property="og:url"
+      content="http://richclub8.dothome.co.kr/responsive/html5/index.html"
+    />
+    <meta
+      property="og:image"
+      content="http://richclub8.dothome.co.kr/assets/ico/icon.png"
+    />
+    <meta property="og:site_name" content="반응형 사이트 만들기(site_name)" />
+    <meta
+      property="og:description"
+      content="반응형 사이트 따라하기(description)"
+    />
 
-  <!-- 파비콘 -->
-  <link rel="shortcut icon" href="icon/favicon-152.png">
-  <link rel="apple-touch-icon-precomposed" href="icon/favicon-152.png">
-  <link rel="icon" href="path/to/favicon.png">
-  <link rel="icon" href="icon/favicon-16.png" sizes="16x16">
-  <link rel="icon" href="icon/favicon-32.png" sizes="32x32">
-  <link rel="icon" href="icon/favicon-48.png" sizes="48x48">
-  <link rel="icon" href="icon/favicon-64.png" sizes="64x64">
-  <link rel="icon" href="icon/favicon-128.png" sizes="128x128">
-  <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    <!-- twitter meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@webstoryboy" />
+    <meta name="twitter:title" content="반응형 사이트 만들기(title)" />
+    <meta
+      name="twitter:description"
+      content="반응형 사이트 만들기(description)."
+    />
+    <meta
+      property="twitter:image"
+      content="http://richclub8.dothome.co.kr/assets/ico/icon.png"
+    />
 
-  <!-- HTLM5shiv ie6~8 -->
-  <!--[if lt IE 9]> 
-              <script src="js/html5shiv.min.js"></script>
-              <script type="text/javascript">
-                  alert("현재 당신이 보는 브라우저는 지원하지 않습니다. 최신 브라우저로 업데이트해주세요!");
-              </script>
-          <![endif]-->
-</head>
+    <!-- font -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Nanum+Gothic"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
+      rel="stylesheet"
+    />
 
-<body>
-  <header id="header">
-    <div class="container">
-      <div class="row">
-        <div class="header">
-          <div class="header_menu">
-            <a href="#">Blog</a><a href="#">Github</a><a href="#">Webstandard</a>
-          </div>
-          <!-- header_menu -->
-          <div class="header_tit">
-            <h1>
-              Professional Web Publisher
-            </h1><br>
-            <a href="#">palepinkday</a>
-          </div>
-          <!-- header_tit -->
-          <div class="header_icon">
-            <ul>
-              <li><a href="#"><i class="fa fa-html5" aria-hidden="true"></i><span>HTML5</span></a></li>
-              <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i><span>Github</span></a></li>
-              <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i><span>Facebook</span></a></li>
-              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>twitter</span></a></li>
-            </ul>
+    <!-- HTLM5shiv ie6~8 -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.min.js"></script>
+      <script type="text/javascript">
+        alert(
+          "현재 당신이 보는 브라우저는 지원하지 않습니다. 최신 브라우저로 업데이트해주세요!"
+        );
+      </script>
+    <![endif]-->
+  </head>
+
+  <body>
+    <header id="header">
+      <div class="container">
+        <div class="row">
+          <div class="header">
+            <div class="header_menu">
+              <a href="#">Blog</a><a href="#">Github</a
+              ><a href="#">We bstandard</a>
+            </div>
+            <!-- header_menu -->
+            <div class="header_tit">
+              <h1>Professional Web Publisher</h1>
+              <br />
+              <a href="#">palepinkday</a>
+            </div>
+            <!-- header_tit -->
+            <div class="header_icon">
+              <ul>
+                <li>
+                  <a href="#"
+                    ><i class="fa fa-html5" aria-hidden="true"></i
+                    ><span>HTML5</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa fa-github" aria-hidden="true"></i
+                    ><span>Github</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="facebook"
+                    ><i class="fa fa-facebook-square" aria-hidden="true"></i
+                    ><span>Facebook</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="twitter"
+                    ><i class="fa fa-twitter" aria-hidden="true"></i
+                    ><span>twitter</span></a
+                  >
+                </li>
+              </ul>
+            </div>
+            <!-- header_icon -->
+
+            <!-- debug -->
+            <!-- 
+                        https://developers.facebook.com/tools/debug/
+                        https://cards-dev.twitter.com/validator
+                    -->
           </div>
         </div>
       </div>
-    </div>
+    </header>
+    <!-- header -->
+    <nav id="nav">
+      <div class="container">
+        <div class="row">
+          <div class="nav">
+            <h2 class="ir_su">반응형 사이트 전체메뉴</h2>
 
-  </header>
-  <!-- header -->
-  <nav>
-    <h2>반응형 사이트 전체메뉴</h2>
-  </nav>
+            <div>
+              <h3>HTML Reference</h3>
+              <ol>
+                <li><a href="#">HTML 태그(Tag)</a></li>
+                <li><a href="#">블록 요소/인라인 요소</a></li>
+                <li><a href="#">DTD 선언</a></li>
+                <li><a href="#">언어 속성 설정</a></li>
+                <li><a href="#">HTML &lt;title&gt;</a></li>
+                <li><a href="#">HTML &lt;meta&gt;</a></li>
+                <li><a href="#">특수문자</a></li>
+                <li><a href="#">하이퍼 링크</a></li>
+                <li><a href="#">HTML &lt;style&gt;</a></li>
+                <li><a href="#">HTML &lt;html&gt;</a></li>
+                <li><a href="#">HTML &lt;head&gt;</a></li>
+                <li><a href="#">HTML &lt;div&gt;</a></li>
+                <li><a href="#">HTML &lt;colgroup&gt;</a></li>
+                <li><a href="#">HTML &lt;caption&gt;</a></li>
+              </ol>
+            </div>
+            <div>
+              <h3>CSS Reference</h3>
+              <ol>
+                <li><a href="#">CSS 선택자</a></li>
+                <li><a href="#">CSS 단위</a></li>
+                <li><a href="#">CSS 색상</a></li>
+                <li><a href="#">CSS 선언 방법</a></li>
+                <li><a href="#">상대주소와 절대주소</a></li>
+                <li><a href="#">CSS float</a></li>
+                <li><a href="#">이미지 표현 방법</a></li>
+                <li><a href="#">이미지 스프라이트</a></li>
+                <li><a href="#">IR 효과</a></li>
+                <li><a href="#">이미지 최적화</a></li>
+                <li><a href="#">background-color</a></li>
+                <li><a href="#">border-style</a></li>
+                <li><a href="#">font-size</a></li>
+                <li><a href="#">text-align</a></li>
+              </ol>
+            </div>
+            <div class="last">
+              <h3>Webstandard</h3>
+              <ol>
+                <li><a href="#">웹 표준</a></li>
+                <li><a href="#">웹 접근성</a></li>
+                <li><a href="#">W3C</a></li>
+                <li><a href="#">웹 접근성 연구소</a></li>
+                <li><a href="#">네이버 널리</a></li>
+                <li><a href="#">다음 다룸</a></li>
+                <li><a href="#">Webstandard</a></li>
+              </ol>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- nav -->
+    <article id="title">
+      <div class="container">
+        <div class="title">
+          <h2>"나는 퍼블리셔다."</h2>
+          <a href="#" class="btn"
+            ><i class="fa fa-angle-down" aria-hidden="true"></i
+            ><span class="ir_su">전체메뉴보기</span></a
+          >
+        </div>
+      </div>
+    </article>
 
-  <article>
-    <h2>반응형 사이트 서브 타이틀</h2>
-  </article>
-
-  <main>
-    <section>
-      <h2>
-        반응형사이트 컨텐츠
-      </h2>
-
+    <main>
       <section>
-        <h3>반응형사이트 왼쪽 컨텐츠</h3>
-        <article>
-          <h4>반응형사이트 왼쪽 컨텐츠1</h4>
-        </article>
-        <article>
-          <h4>반응형사이트 왼쪽 컨텐츠1</h4>
-        </article>
-        <article>
-          <h4>반응형사이트 왼쪽 컨텐츠1</h4>
-        </article>
+        <h2>반응형사이트 컨텐츠</h2>
+
+        <section>
+          <h3>반응형사이트 왼쪽 컨텐츠</h3>
+          <article>
+            <h4>반응형사이트 왼쪽 컨텐츠1</h4>
+          </article>
+          <article>
+            <h4>반응형사이트 왼쪽 컨텐츠1</h4>
+          </article>
+          <article>
+            <h4>반응형사이트 왼쪽 컨텐츠1</h4>
+          </article>
+        </section>
+
+        <section>
+          <h3>반응형사이트 가운데 컨텐츠</h3>
+          <article>
+            <h4>반응형사이트 가운데 컨텐츠1</h4>
+          </article>
+          <article>
+            <h4>반응형사이트 가운데 컨텐츠1</h4>
+          </article>
+          <article>
+            <h4>반응형사이트 가운데 컨텐츠1</h4>
+          </article>
+        </section>
+        <section>
+          <h3>반응형사이트 오른쪽 컨텐츠</h3>
+          <article>
+            <h4>반응형사이트 오른쪽 컨텐츠1</h4>
+          </article>
+          <article>
+            <h4>반응형사이트 오른쪽 컨텐츠1</h4>
+          </article>
+          <article>
+            <h4>반응형사이트 오른쪽 컨텐츠1</h4>
+          </article>
+        </section>
       </section>
+    </main>
 
-      <section>
-        <h3>반응형사이트 가운데 컨텐츠</h3>
-        <article>
-          <h4>반응형사이트 가운데 컨텐츠1</h4>
-        </article>
-        <article>
-          <h4>반응형사이트 가운데 컨텐츠1</h4>
-        </article>
-        <article>
-          <h4>반응형사이트 가운데 컨텐츠1</h4>
-        </article>
+    <footer>
+      <h2>반응형사이트 푸터</h2>
+    </footer>
 
-      </section>
-      <section>
-        <h3>반응형사이트 오른쪽 컨텐츠</h3>
-        <article>
-          <h4>반응형사이트 오른쪽 컨텐츠1</h4>
-        </article>
-        <article>
-          <h4>반응형사이트 오른쪽 컨텐츠1</h4>
-        </article>
-        <article>
-          <h4>반응형사이트 오른쪽 컨텐츠1</h4>
-        </article>
-      </section>
+    <script src="js/jquery.min_1.12.4.js"></script>
+    <script src="js/modernizr-custom.js"></script>
+    <script>
+      //http://www.facebook.com/sharer.php?u={페이지 제목}&t={페이지링크}
+      //http://twitter.com/intent/tweet?text={페이지 제목}&url={페이지링크}
+      //https://share.naver.com/web/shareView.nhn?url={페이지링크}&title={페이지 제목}
+      //https://plus.google.com/share?url={페이지링크}&t={페이지 제목}
 
-    </section>
-  </main>
+      $(".facebook").click(function (e) {
+        e.preventDefault();
+        window.open(
+          "https://www.facebook.com/sharer/sharer.php?u=" +
+            encodeURIComponent(document.URL) +
+            "&t=" +
+            encodeURIComponent(document.title),
+          "facebooksharedialog",
+          "menubar=no, toolbar=no, resizable=yes, scrollbars=yes, height=300, width=600"
+        );
+      });
 
-  <footer>
-    <h2>반응형사이트 푸터</h2>
-  </footer>
-
-
-
-  <script src="js/jquery.min_1.12.4.js"></script>
-  <script src="js/modernizr-custom.js"></script>
-</body>
-
+      $(".twitter").click(function (e) {
+        e.preventDefault();
+        window.open(
+          "https://twitter.com/intent/tweet?text=[%EA%B3%B5%EC%9C%A0]%20" +
+            encodeURIComponent(document.URL) +
+            "%20-%20" +
+            encodeURIComponent(document.title),
+          "twittersharedialog",
+          "menubar=no, toolbar=no, resizable=yes, scrollbars=yes, height=300, width=600"
+        );
+      });
+    </script>
+  </body>
 </html>
