--- a/responsive web/index.html
+++ b/responsive web/index.html
@@ -6,11 +6,19 @@
     <meta name="author" content="palepinkday" />
     <meta name="description" content="반응형 사이트" />
     <meta name="keywords" content="반응형사이트" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta
+      name="viewport"
+      content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width"
+    />
     <title>responsive web</title>
     <!-- style -->
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/font-awesome.css" />
+    <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/lightgallery.css" />
+
     <!-- <link rel="stylesheet" href="css/font-awesome.css"> -->
     <link
       rel="stylesheet"
@@ -313,29 +321,25 @@
                   <li>
                     <a href="#"
                       >이 줄은 두 줄 효과입니다.이 줄은 두 줄 효과입니다.이 줄은
-                      두 줄 효과입니다.이 줄은 두 줄 효과입니다.이 줄은 두 줄
-                      효과입니다.</a
+                      두 줄 효과입니다.이 줄은 두 줄 효과입니다.</a
                     >
                   </li>
                   <li>
                     <a href="#"
                       >이 줄은 두 줄 효과입니다.이 줄은 두 줄 효과입니다.이 줄은
-                      두 줄 효과입니다.이 줄은 두 줄 효과입니다.이 줄은 두 줄
-                      효과입니다.</a
+                      두 줄 효과입니다.이 줄은 두 줄 효과입니다.</a
                     >
                   </li>
                   <li>
                     <a href="#"
                       >이 줄은 두 줄 효과입니다.이 줄은 두 줄 효과입니다.이 줄은
-                      두 줄 효과입니다.이 줄은 두 줄 효과입니다.이 줄은 두 줄
-                      효과입니다.</a
+                      두 줄 효과입니다.이 줄은 두 줄 효과입니다.</a
                     >
                   </li>
                   <li>
                     <a href="#"
                       >이 줄은 두 줄 효과입니다.이 줄은 두 줄 효과입니다.이 줄은
-                      두 줄 효과입니다.이 줄은 두 줄 효과입니다.이 줄은 두 줄
-                      효과입니다.</a
+                      두 줄 효과입니다.이 줄은 두 줄 효과입니다.</a
                     >
                   </li>
                 </ul>
@@ -343,12 +347,58 @@
                   >More<i class="fa fa-plus-circle" aria-hidden="true"></i
                 ></a>
               </div>
-              <!-- //게시판 -->
+              <!-- //게시판2 -->
             </article>
             <!-- //col2 -->
+
             <article class="column col3">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명부분입니다.</p>
+              <h4 class="col_tit">Blog</h4>
+              <p class="col_desc">
+                해상도에 따라 이미지를 다르게 표현하는 방법입니다.
+              </p>
+              <!-- blog1 -->
+              <div class="blog1">
+                <h5 class="ir_su">image1</h5>
+                <figure>
+                  <!-- <img
+                    src="img/blog1_@1.jpg"
+                    class="img-normal"
+                    alt="normal image"
+                  />
+                  <img
+                    src="img/blog1_@2.jpg"
+                    class="img-retina"
+                    alt="retina image"
+                    width="100%"
+                  /> -->
+                  <img
+                    src="img/blog3_@1.jpg"
+                    srcset="
+                      img/blog3_@1.jpg 1x,
+                      img/blog3_@2.jpg 2x,
+                      img/blog3_@3.jpg 3x
+                    "
+                    alt="이미지"
+                  />
+                  <figcaption>
+                    반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지
+                    글입니다.
+                  </figcaption>
+                </figure>
+              </div>
+              <!-- //blog1 -->
+
+              <!-- blog2 -->
+              <div class="blog2 mt15">
+                <div class="img-retina">
+                  <h5>image2</h5>
+                </div>
+                <p>
+                  반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지
+                  글입니다.
+                </p>
+              </div>
+              <!-- //blog2 -->
             </article>
             <!-- //col3 -->
           </section>
@@ -356,13 +406,90 @@
           <section id="cont_center">
             <h3 class="ir_su">반응형사이트 가운데 컨텐츠</h3>
             <article class="column col4">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명부분입니다.</p>
+              <h4 class="col_tit">Slick Slider</h4>
+              <p class="col_desc">
+                slick.js를 이용한 이미지 슬라이드 효과입니다.
+              </p>
+              <!-- 이미지슬라이드 -->
+              <div class="slider">
+                <div>
+                  <figure>
+                    <img src="img/slider001.jpg" alt="이미지1" />
+                    <figcaption>
+                      <em>Responsive Site</em>
+                      <span
+                        >슬라이드 플러그인을 이용한 반응형 이미지 슬라이드
+                        입니다.</span
+                      >
+                    </figcaption>
+                  </figure>
+                </div>
+                <div>
+                  <figure>
+                    <img src="img/slider001.jpg" alt="이미지2" />
+                    <figcaption>
+                      <em>Responsive Site</em>
+                      <span
+                        >슬라이드 플러그인을 이용한 반응형 이미지 슬라이드
+                        입니다.</span
+                      >
+                    </figcaption>
+                  </figure>
+                </div>
+                <div>
+                  <figure>
+                    <img src="img/slider001.jpg" alt="이미지3" />
+                    <figcaption>
+                      <em>Responsive Site</em>
+                      <span
+                        >슬라이드 플러그인을 이용한 반응형 이미지 슬라이드
+                        입니다.</span
+                      >
+                    </figcaption>
+                  </figure>
+                </div>
+              </div>
+              <!-- //이미지슬라이드 -->
             </article>
             <!-- //col4 -->
             <article class="column col5">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명부분입니다.</p>
+              <h4 class="col_tit">Blend Effect</h4>
+              <p class="col_desc">background-blend-mode와 mix-blend-mode</p>
+              <!-- lightbox -->
+              <div class="lightbox square clearfix">
+                <a href="img/light01_s.jpg"
+                  ><img src="img/light01.jpg" alt="이미지" />
+                </a>
+                <a href="img/light02_s.jpg"
+                  ><img src="img/light02.jpg" alt="이미지" />
+                </a>
+                <a href="img/light03_s.jpg"
+                  ><img src="img/light03.jpg" alt="이미지" />
+                </a>
+                <a href="img/light04_s.jpg"
+                  ><img src="img/light04.jpg" alt="이미지" />
+                </a>
+                <a href="img/light05_s.jpg"
+                  ><img src="img/light05.jpg" alt="이미지" />
+                </a>
+                <a href="img/light06_s.jpg"
+                  ><img src="img/light06.jpg" alt="이미지" />
+                </a>
+                <a href="img/light07_s.jpg"
+                  ><img src="img/light07.jpg" alt="이미지" />
+                </a>
+                <a href="img/light08_s.jpg"
+                  ><img src="img/light08.jpg" alt="이미지" />
+                </a>
+                <a href="img/light09_s.jpg"
+                  ><img src="img/light09.jpg" alt="이미지" />
+                </a>
+                <a href="img/light10_s.jpg"
+                  ><img src="img/light10.jpg" alt="이미지" />
+                </a>
+              </div>
+
+              <!-- //lightbox -->
             </article>
             <!-- //col5 -->
             <article class="column col6">
@@ -404,12 +531,35 @@
 
     <script src="js/jquery.min_1.12.4.js"></script>
     <script src="js/modernizr-custom.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/lightgallery.min.js"></script>
+
     <script>
       //http://www.facebook.com/sharer.php?u={페이지 제목}&t={페이지링크}
       //http://twitter.com/intent/tweet?text={페이지 제목}&url={페이지링크}
       //https://share.naver.com/web/shareView.nhn?url={페이지링크}&title={페이지 제목}
       //https://plus.google.com/share?url={페이지링크}&t={페이지 제목}
 
+      //라이트 박스
+      $(".lightbox").lightGallery({});
+
+      //이미지 슬라이더
+      $(".slider").slick({
+        dots: true,
+        autoplay: true,
+        autoplaySpeed: 3000,
+        arrows: true,
+        responsive: [
+          {
+            breakpoint: 768,
+            settings: {
+              autoplay: false,
+            },
+          },
+        ],
+      });
+
+      //sns 공유하기
       $(".facebook").click(function (e) {
         e.preventDefault();
         window.open(
@@ -421,7 +571,6 @@
           "menubar=no, toolbar=no, resizable=yes, scrollbars=yes, height=300, width=600"
         );
       });
-
       $(".twitter").click(function (e) {
         e.preventDefault();
         window.open(
