--- a/responsive_web/index.html
+++ b/responsive_web/index.html
@@ -498,13 +498,20 @@
 
       if ($(".btn").hasClass("open")) {
         //open이 있을때
-        $(".btn").find("i").attr("class", "fa-angle-up")
+        $(".btn").find("i").attr("class", "fa fa-angle-up")
       } else {
         //open이 없을때
-        $(".btn").find("i").attr("class", "fa-angle-down")
+        $(".btn").find("i").attr("class", "fa fa-angle-down")
       }
 
-    })
+    });
+    $(window).resize(function () {
+      var wWidth = $(window).width();
+      if (wWindow > 600) {
+        $(".nav").removeAttr("style");
+      }
+    });
+
     //라이트 박스
     $(".lightbox").lightGallery({
       autoplay: true,
