--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -364,7 +364,7 @@
                 </div>
                 <div class="bot">
                   <a
-                    href="https://palepinkday.github.io/coding2/site1/index.html"
+                    href="https://palepinkday.github.io/coding2/javascript/effect/sliderEffect.html"
                     class="site_view"
                     >사이트보기</a
                   >
@@ -394,7 +394,7 @@
                 </div>
                 <div class="bot">
                   <a
-                    href="https://palepinkday.github.io/coding2/site1/index.html"
+                    href="https://palepinkday.github.io/coding2/javascript/effect/quizEffect.html"
                     class="site_view"
                     >사이트보기</a
                   >
@@ -425,7 +425,7 @@
                 </div>
                 <div class="bot">
                   <a
-                    href="https://palepinkday.github.io/coding2/site1/index.html"
+                    href="https://palepinkday.github.io/coding2/javascript/effect/mouseEffect.html"
                     class="site_view"
                     >사이트보기</a
                   >
