--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -23,23 +23,23 @@
         <li>
           <a href="#" class="font1" class="about">about</a>
           <!-- <div class="modal">
-                        <h3>about</h3>
-                        <div class="desc">
-                            <div class="left">
-                                <img src="" alt="about">
-                            </div>
-                            <div class="right">꿈이 있는 신입 웹 퍼블리셔 유현주입니다. 대학 졸업 후 쇼핑몰을 운영한 경험이 있습니다. 사이트를 운영하면서 사이트를 원하는 대로
-                                바꾸기엔 한계가 있었습니다. 그래서 답답했던 적이 많았습니다. 지나오면서 그때 공부를 좀 더 해 봤었다면 어땠을까? 하고 자주 생각했고 아쉬움이 많이
-                                남았습니다.올해, 문득 다시 도전해보면 어떨까? 하는 생각이 들면서 국비지원 학원에 등록하고 저의 아쉬움을 실현해보는 기회가 생겼습니다. 처음엔 잘 할수
-                                있을까? 걱정도
-                                되었지만 시간이 지나면서 어느새 몰입하고 있는 저를 보면서 진정 살아 숨쉬고 있는 느낌이 들었습니다. 그리고 저의 선택과 도전에 대한 걱정을 지울 수
-                                있었습니다.공부를 하면서 느낀 점은 코딩으로 사이트를 시각화 시킨다는 점이 무척 매력적이었습니다. 그리고 어려운 부분이 생기면 고민하고 탐색하며 나아가는 것도
-                                좋았습니다. 한 가족의 엄마로 살아가다가 오로지 나에게 투자되는 시간들이 무지 소중하고 감사하게 느껴졌습니다. 그래서 이 시간들을 허투로 쓰기 싫어서 계획을
-                                세우고 실천하며, 공부하고 준비했습니다.</div>
-                        </div>
+            <h3>about</h3>
+            <div class="desc">
+              <div class="left">
+                <img src="" alt="about">
+              </div>
+              <div class="right">꿈이 있는 신입 웹 퍼블리셔 유현주입니다. 대학 졸업 후 쇼핑몰을 운영한 경험이 있습니다. 사이트를 운영하면서 사이트를 원하는 대로
+                바꾸기엔 한계가 있었습니다. 그래서 답답했던 적이 많았습니다. 지나오면서 그때 공부를 좀 더 해 봤었다면 어땠을까? 하고 자주 생각했고 아쉬움이 많이
+                남았습니다.올해, 문득 다시 도전해보면 어떨까? 하는 생각이 들면서 국비지원 학원에 등록하고 저의 아쉬움을 실현해보는 기회가 생겼습니다. 처음엔 잘 할수
+                있을까? 걱정도
+                되었지만 시간이 지나면서 어느새 몰입하고 있는 저를 보면서 진정 살아 숨쉬고 있는 느낌이 들었습니다. 그리고 저의 선택과 도전에 대한 걱정을 지울 수
+                있었습니다.공부를 하면서 느낀 점은 코딩으로 사이트를 시각화 시킨다는 점이 무척 매력적이었습니다. 그리고 어려운 부분이 생기면 고민하고 탐색하며 나아가는 것도
+                좋았습니다. 한 가족의 엄마로 살아가다가 오로지 나에게 투자되는 시간들이 무지 소중하고 감사하게 느껴졌습니다. 그래서 이 시간들을 허투로 쓰기 싫어서 계획을
+                세우고 실천하며, 공부하고 준비했습니다.</div>
+            </div>
 
-                        <a href="#" class="close">닫기</a>
-                    </div> -->
+            <a href="#" class="close1">닫기</a>
+          </div> -->
         </li>
       </ul>
     </nav>
@@ -50,15 +50,14 @@
     <div class="contaienr">
       <div class="title">
         <ul>
-          <li class="study"><a href="#">STUDY</a></li>
-          <li class="site"><a href="#">SITES</a></li>
-          <li class="design"><a href="#">DESIGN</a></li>
-          <li class="javascript"><a href="#">JAVASCRIPT</a></li>
+          <li class="study"><a href="/">STUDY</a></li>
+          <li class="site"><a href="/">SITES</a></li>
+          <li><a href="/">DESIGN</a></li>
+          <li><a href="/">JAVASCRIPT</a></li>
         </ul>
       </div>
       <div class="keyword">
-
-        <div class="webstandard site">
+        <div class="webstandard" class="site">
           <a href="#" class="btn-modal">Webstandard</a>
           <span>웹표준 코딩 작업</span>
           <div class="modal">
@@ -81,8 +80,10 @@
                 접근성을 준수했습니다.
               </div>
               <div class="bot">
-                <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+                <a href="https://palepinkday.github.io/coding2/site1/index.html" target="_blank"
+                  class="site_view">사이트보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
+                  class="code">코드보기</a>
               </div>
             </div>
             <a href="#" class="close">닫기</a>
@@ -91,7 +92,8 @@
 
 
 
-        <div class="Responsive site">
+
+        <div class="Responsive" class="site">
           <a href="#" class="btn-modal">Responsive Web</a>
           <span>반응형웹 코딩 작업</span>
           <div class="modal">
@@ -109,8 +111,10 @@
                 추가 개발 이슈에 대해 시간과 비용면에서도 보다 효율적입니다.
               </div>
               <div class="bot">
-                <a href="https://palepinkday.github.io/coding2/responsive_web/index.html" class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+                <a href="https://palepinkday.github.io/coding2/responsive_web/index.html" target="_blank"
+                  class="site_view">사이트보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/responsive_web/index.html" target="_blank"
+                  class="code">코드보기</a>
               </div>
             </div>
             <a href="#" class="close">닫기</a>
@@ -198,7 +202,7 @@
 
 
 
-        <div class="Coding_Clone_Site site">
+        <div class="Coding_Clone_Site" class="site">
           <a href="#" class="btn-modal">Coding Clone Site</a>
           <span>클론 코딩 사이트</span>
           <div class="modal">
@@ -211,8 +215,10 @@
               </div>
               <div class="right">이렇게 작업을 했습니다.</div>
               <div class="bot">
-                <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+                <a href="https://palepinkday.github.io/coding2/site1/index.html" target="_blank"
+                  class="site_view">사이트보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
+                  class="code">코드보기</a>
               </div>
             </div>
 
@@ -315,9 +321,10 @@
                 개체들에 움직임을 주어 역동적인 사이트를 만들 수 있습니다.
               </div>
               <div class="bot">
-                <a href="https://palepinkday.github.io/coding2/javascript/effect/parallaxEffect01.html"
+                <a href="https://palepinkday.github.io/coding2/javascript/effect/parallaxEffect01.html" target="_blank"
                   class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
+                  class="code">코드보기</a>
               </div>
             </div>
             <a href="#" class="close">닫기</a>
@@ -338,9 +345,10 @@
                 효과를 줄 수 있습니다.
               </div>
               <div class="bot">
-                <a href="https://palepinkday.github.io/coding2/javascript/effect/sliderEffect.html"
+                <a href="https://palepinkday.github.io/coding2/javascript/effect/sliderEffect.html" target="_blank"
                   class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
+                  class="code">코드보기</a>
               </div>
             </div>
             <a href="#" class="close">닫기</a>
@@ -361,9 +369,10 @@
                 입니다.
               </div>
               <div class="bot">
-                <a href="https://palepinkday.github.io/coding2/javascript/effect/quizEffect.html"
+                <a href="https://palepinkday.github.io/coding2/javascript/effect/quizEffect.html" target="_blank"
                   class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
+                  class="code">코드보기</a>
               </div>
             </div>
             <a href="#" class="close">닫기</a>
@@ -385,9 +394,10 @@
                 이펙트입니다.
               </div>
               <div class="bot">
-                <a href="https://palepinkday.github.io/coding2/javascript/effect/mouseEffect.html"
+                <a href="https://palepinkday.github.io/coding2/javascript/effect/mouseEffect.html" target="_blank"
                   class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
+                  class="code">코드보기</a>
               </div>
             </div>
             <a href="#" class="close">닫기</a>
@@ -406,16 +416,16 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<!-- <script>
+<script>
   $(".title>ul>li").click(function (e) {
     e.preventDefault();
     let text = $(this).text();
-    $(".keyword>div").removeClass("up");
+    // $(".keyword>div").removeClass("up");
     if ($(".keyword>div").hasClass(text)) {
       $("." + text).addClass("up");
     }
   });
-</script> -->
+</script>
 <script>
   $(".btn-modal").click(function (e) {
     e.preventDefault();
@@ -426,16 +436,7 @@
     $(this).parent().parent().removeClass("open");
   });
 </script>
-<script>
-  $(".about").click(function (e) {
-    e.preventDefault();
-    $(this).parent().addClass("open");
-  });
-  $(".close").click(function (e) {
-    e.preventDefault();
-    $(this).parent().parent().removeClass("open");
-  });
-</script>
+
 <script type="x-shader/x-vertex" id="vertCode">
     uniform float time;
   </script>
