--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -323,8 +323,8 @@
               <div class="bot">
                 <a href="https://palepinkday.github.io/coding2/javascript/effect/parallaxEffect01.html" target="_blank"
                   class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
-                  class="code">코드보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/javascript/effect/parallaxEffect01.html"
+                  target="_blank" class="code">코드보기</a>
               </div>
             </div>
             <a href="#" class="close">닫기</a>
@@ -347,8 +347,8 @@
               <div class="bot">
                 <a href="https://palepinkday.github.io/coding2/javascript/effect/sliderEffect.html" target="_blank"
                   class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
-                  class="code">코드보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/javascript/effect/sliderEffect.html"
+                  target="_blank" class="code">코드보기</a>
               </div>
             </div>
             <a href="#" class="close">닫기</a>
@@ -371,8 +371,8 @@
               <div class="bot">
                 <a href="https://palepinkday.github.io/coding2/javascript/effect/quizEffect.html" target="_blank"
                   class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
-                  class="code">코드보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/javascript/effect/quizEffect.html"
+                  target="_blank" class="code">코드보기</a>
               </div>
             </div>
             <a href="#" class="close">닫기</a>
@@ -396,8 +396,8 @@
               <div class="bot">
                 <a href="https://palepinkday.github.io/coding2/javascript/effect/mouseEffect.html" target="_blank"
                   class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
-                  class="code">코드보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/javascript/effect/mouseEffect.html"
+                  target="_blank" class="code">코드보기</a>
               </div>
             </div>
             <a href="#" class="close">닫기</a>
