--- a/clone/index.html
+++ b/clone/index.html
@@ -54,6 +54,19 @@
 </head>
 
 <body>
+  <!-- 스킵메뉴 -->
+  <div class="skiip">
+    <a rel="bookmark" href="#movie">
+      최신영화소식
+    </a>
+    <a rel="bookmark" href="#event">
+      새로운 이벤트
+    </a>
+    <a rel="bookmark" href="#new">
+      새로운 영화
+    </a>
+  </div>
+  <!-- //스킵메뉴 -->
   <header id="header">
     <div class="container">
       <div class="row">
@@ -950,7 +963,7 @@
       <div class="row">
         <div class="new">
           <h2>새로운 영화</h2>
-          <div class="new_left">
+          <div class="new_left" id="showTrailer" data-youtube="F1239ZePXfM">
             <div class="play">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 120 120"
@@ -1052,60 +1065,60 @@
                       <dl>
                         <dt><strong class="bar">전체</strong><em>2019.05.28</em>
                         </dt>
-                        <dd>[무대인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼 </dd>
+                        <dd><a href="#">[무대인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a> </dd>
                       </dl>
                     </li>
                     <li>
                       <dl>
                         <dt><strong class="bar">전체</strong><em>2019.05.28</em>
                         </dt>
-                        <dd>[무대인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼 </dd>
+                        <dd><a href="#">[무대인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a></dd>
                       </dl>
                     </li>
                     <li>
                       <dl>
                         <dt><strong class="bar">전체</strong><em>2019.05.28</em>
                         </dt>
-                        <dd>[무대인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼 </dd>
+                        <dd><a href="#">[무대인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a></dd>
                       </dl>
                     </li>
                     <li>
                       <dl>
                         <dt><strong class="bar">전체</strong><em>2019.05.28</em>
                         </dt>
-                        <dd>[무대인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼 </dd>
+                        <dd><a href="#">[무대인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a></dd>
                       </dl>
                     </li>
                   </ul>
                 </li>
                 <li><a href="#">영화관 공지</a>
-                  <ul style="display: none">
+                  <ul>
                     <li>
                       <dl>
                         <dt><strong class="bar">안양</strong><em>2019.05.28</em>
                         </dt>
-                        <dd>[영화인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼 </dd>
+                        <dd><a href="#">[영화인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a></dd>
                       </dl>
                     </li>
                     <li>
                       <dl>
                         <dt><strong class="bar">인덕원</strong><em>2019.05.28</em>
                         </dt>
-                        <dd>[영화인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼 </dd>
+                        <dd><a href="#">[영화인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a> </dd>
                       </dl>
                     </li>
                     <li>
                       <dl>
                         <dt><strong class="bar">서울</strong><em>2019.05.28</em>
                         </dt>
-                        <dd>[영화인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼 </dd>
+                        <dd><a href="#">[영화인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a></dd>
                       </dl>
                     </li>
                     <li>
                       <dl>
                         <dt><strong class="bar">인천</strong><em>2019.05.28</em>
                         </dt>
-                        <dd>[영화인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼 </dd>
+                        <dd><a href="#">[영화인사]터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a></dd>
                       </dl>
                     </li>
                   </ul>
@@ -1725,75 +1738,28 @@
   </footer>
   <!-- //footer -->
 
+  <!-- 트레일러 -->
+  <aside id="blackout" class="overlay">
+    <div id="trailerModal" class="modal">
+      <div id="trailer"></div><!-- YouTube 플레이어로 대체되는 부분 -->
+    </div>
+    <button id="hideTrailer" class="modal_close">닫기</button>
+  </aside>
+  <!-- //트레일러 -->
 
   <!-- 자바스크립트 라이브러리 -->
   <script src="js/jquery.min_1.12.4.js"></script>
   <script src="js/modernizr-custom.js"></script>
   <script src="js/ie-checker.js"></script>
   <script src="js/swiper.min.js"></script>
+  <script src="js/iframe_api.js"></script>
+  <script src="js/movie.js"></script>
+  <script src="js/custom.js"></script>
+
+
 
   <script>
-    //배너이미지슬라이드
-    var mySwiper = new Swiper(".swiper-container", {
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-      pagination: {
-        el: ".swiper-pagination",
-        type: "bullets",
-      },
-      autoplay: {
-        delay: 5000,
-      },
-    });
 
-    //영화차트 이미지 슬라이드
-    var mySwiper = new Swiper(".swiper-container2", {
-      slidesPerView: 4,
-      spaceBetween: 24,
-      mousewheel: {
-        invert: true,
-      },
-      keyboard: {
-        enabled: true,
-        onlyInViewport: false,
-      },
-      autoplay: {
-        delay: 6000,
-      },
-      breakpoints: {
-        600: {
-          slidesPerView: 1.4,
-          spaceBetween: 24,
-        },
-        768: {
-          slidesPerView: 2,
-          spaceBetween: 24,
-        },
-        960: {
-          slidesPerView: 3,
-          spaceBetween: 24,
-        },
-      },
-    });
-
-    //영화차트 탭메뉴
-    var movBtn = $(".movie_title>ul>li");
-    var movCont = $(".movie_chart>div");
-    movCont.hide().eq(0).show();
-    movBtn.click(function (e) {
-      e.preventDefault();
-      // #링크차단
-      var target = $(this);
-      var index = target.index();
-      // alert(index);
-      movBtn.removeClass("active");
-      target.addClass("active");
-      // movCont.hide();
-      movCont.css("display", "none");
-      movCont.eq(index).css("display", "block");
-    });
   </script>
 </body>
 
