--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -58,7 +58,7 @@
       </div>
       <div class="keyword">
         <div class="webstandard">
-          <a href="#" class="SITES" class="btn-modal">Webstandard</a>
+          <a href="#" class="btn-modal">Webstandard</a>
           <span>웹표준 코딩 작업</span>
           <div class="modal">
             <h3>웹표준 코딩 작업</h3>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="Responsive">
-          <a href="#" class="SITES" class="btn-modal">Responsive Web</a>
+          <a href="#" class="btn-modal">Responsive Web</a>
           <span>반응형웹 코딩 작업</span>
           <div class="modal">
             <h3>반응형웹 코딩 작업</h3>
@@ -199,21 +199,19 @@
 
 
         <div class="Coding_Clone_Site">
-          <a href="#" class="SITES" class="btn-modal">Coding Clone Site</a>
+          <a href="#" class="btn-modal">Coding Clone Site</a>
           <span>클론 코딩 사이트</span>
           <div class="modal">
             <h3>클론 코딩 사이트</h3>
             <div class="desc">
               <div class="left">
-                <img
-                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
-                  alt="ddd" />
+                <img src="img/clone.png" alt="클론 코딩 사이트" />
               </div>
-              <div class="right">이렇게 작업을 했습니다.</div>
+              <div class="right">메가넥스 기업사이트를 만들어 보았습니다. 기업사이트를 반응형 웹으로 다시 만들어 보면서 복습도 하고 여러 기능을 구현해 볼 수 있었다.</div>
               <div class="bot">
-                <a href="https://palepinkday.github.io/coding2/site1/index.html" target="_blank"
+                <a href="https://palepinkday.github.io/coding2/clone/index.html" target="_blank"
                   class="site_view">사이트보기</a>
-                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" target="_blank"
+                <a href="https://github.com/palepinkday/coding2/blob/main/clone/index.html" target="_blank"
                   class="code">코드보기</a>
               </div>
             </div>
@@ -413,14 +411,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
-  $(".title > ul > li").click(function (e) {
-    e.preventDefault();
-    let text = $(this).text();
-    $(".keyword > div").removeClass("up");
-    if ($(".keyword > div").hasClass(text)) {
-      $("." + text).addClass("up");
-    }
-  });
+  // $(".title > ul > li").click(function (e) {
+  //   e.preventDefault();
+  //   let text = $(this).text();
+  //   $(".keyword > div").removeClass("up");
+  //   if ($(".keyword > div").hasClass(text)) {
+  //     $("." + text).addClass("up");
+  //   }
+  // });
 </script>
 <script>
   $(".btn-modal").click(function (e) {
