--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -207,7 +207,7 @@
               <div class="left">
                 <img src="img/clone.png" alt="클론 코딩 사이트" />
               </div>
-              <div class="right">메가넥스 기업사이트를 만들어 보았습니다. 기업사이트를 반응형 웹으로 다시 만들어 보면서 복습도 하고 여러 기능을 구현해 볼 수 있었다.</div>
+              <div class="right">메가넥스 기업사이트를 만들어 보았습니다. 기업사이트를 반응형 웹으로 만들어 보면서 복습도 하고 여러 기능을 구현해 볼 수 있었다.</div>
               <div class="bot">
                 <a href="https://palepinkday.github.io/coding2/clone/index.html" target="_blank"
                   class="site_view">사이트보기</a>
