--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -198,7 +198,7 @@
 
 
 
-        <div class="Coding_Clone_Site">
+        <div class="Clone_Coding_Site">
           <a href="#" class="btn-modal">Coding Clone Site</a>
           <span>클론 코딩 사이트</span>
           <div class="modal">
