--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -199,7 +199,7 @@
 
 
         <div class="Clone_Coding_Site">
-          <a href="#" class="btn-modal">Coding Clone Site</a>
+          <a href="#" class="btn-modal">Clone Coding Site</a>
           <span>클론 코딩 사이트</span>
           <div class="modal">
             <h3>클론 코딩 사이트</h3>
